[package]
name = "h2-net-lcd"
version = "0.1.0"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
lcd = { git = "https://github.com/wfraser/lcd", rev = "b62212d7441f916a9fcef7dad01279a30dcff6f8" }
lcd-pcf8574 = { git = "https://github.com/wfraser/lcd-pcf8574" }
signal-hook = "0.3.4"
systemstat = "0.1.6"

[features]
default = []
mock = []
