[package]
name = "h2-net-lcd"
version = "0.1.1"
authors = ["William R. Fraser <wfraser@codewise.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
i2cdev = "*" # whatever's in lcd-pcf8574
lcd = "0.4.1"
lcd-pcf8574 = "0.2.0"
libc = "0.2"
nix = "*" # whatever's in i2cdev
signal-hook = "0.3.4"
systemstat = "0.1.6"

[features]
default = []
mock = []
